2015-06-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* tools/xsl2pot (process): Add empty msgstr_plural entries if
	msgid_plural but no default plural is given.

2015-06-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/po/CMakeLists.txt (MAKE_TRANSLATION): Also change name pattern
	in -o argument of msgmerge command.

2015-06-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/po/CMakeLists.txt (MAKE_TRANSLATION, gettext-po-files): Change
	the name pattern of merged .po files to gsad_xsl-${_LANG}-merged.po to
	avoid conflicts with source .po files when building in-source.

2015-06-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (gsa:permission-description): Correct
	text for get and modify permissions on a specific resource.

2015-06-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (filter-criteria, filter-extra): Put
	task_id in editable filter if there are any logical operator keywords.
	(task [details]): Add number of results with a link to a list of
	results for the task.

2015-06-06  Sven Haardiek <sven.haardiek@greenbone.net>

	* src/CMakeLists.txt: Remove obsolete checks with splint and rats.

2015-06-06  Sven Haardiek <sven.haardiek@greenbone.net>

	* CMakeLists.txt: Enable preprocessor defition for GSAD_PID_DIR

2015-06-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/gsad.c: Guard thread initialization macros deprecated in
	libgcrypt >= 1.6.0 with defines.

2015-06-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (filter-window-part): Do not apply gsa:i18n
	to column names as they should already be translated.
	(task-icons): Set context for "Next due" strings to "Task|Schedule".

2015-06-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Consolidate text made out of multiple parts into single strings and
	ensure i18n default is always the same as msgid. Also add missing